--- a/LeafyLogic/LeafyBrain/templates/base.html
+++ b/LeafyLogic/LeafyBrain/templates/base.html
@@ -25,6 +25,9 @@
             <a href="{% url 'reports' %}">Reports</a>
         </nav>
     </header>
-    <main>{% block content %} {% endblock %}</main>
+    <main>
+        <p id="Latest">Latest Reading at {{time}}
+        </p>
+        {% block content %} {% endblock %}</main>
 </body>
 </html>
